--- a/WebAddresBookSolution/1_AdressBook/Views/web.config
+++ b/WebAddresBookSolution/1_AdressBook/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="_1_AdressBook" />
+        <add namespace="My_AdressBook" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
