--- a/WebAddresBookSolution/1_AdressBook/Web.config
+++ b/WebAddresBookSolution/1_AdressBook/Web.config
@@ -13,6 +13,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
+    <customErrors mode="On" defaultRedirect="~/Error">
+      <error redirect="~/Error/NotFound" statusCode="404" />
+      <error redirect="~/Error/InernalServerError" statusCode="500" />
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
